fully non-blocking implementation