@@ -3,6 +3,7 @@ package org.fiware.tmforum.rest;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
+import io.reactivex.Single;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.fiware.product.api.CategoryApi;
@@ -11,6 +12,7 @@ import org.fiware.product.model.CategoryCreateVO;
 import org.fiware.product.model.CategoryUpdateVO;
 import org.fiware.product.model.CategoryVO;
 import org.fiware.tmforum.domain.TMForumMapper;
+import org.fiware.tmforum.domain.product.Catalog;
 import org.fiware.tmforum.domain.product.Category;
 import org.fiware.tmforum.domain.product.CategoryRef;
 import org.fiware.tmforum.domain.product.offering.ProductOfferingPriceRelationship;
@@ -19,6 +21,7 @@ import org.fiware.tmforum.exception.NonExistentReferenceException;
 import org.fiware.tmforum.repository.ProductCatalogRepository;
 
 import javax.annotation.Nullable;
+import javax.print.attribute.standard.Sides;
 import java.net.URI;
 import java.util.List;
 import java.util.Optional;
@@ -34,44 +37,63 @@ public class CategoryApiController implements CategoryApi {
 	private final ValidationService validationService;
 
 	@Override
-	public HttpResponse<CategoryVO> createCategory(CategoryCreateVO categoryCreateVO) {
+	public Single<HttpResponse<CategoryVO>> createCategory(CategoryCreateVO categoryCreateVO) {
 		CategoryVO categoryVO = tmForumMapper.map(categoryCreateVO);
 		Category category = tmForumMapper.map(categoryVO);
-		Optional.ofNullable(category.getSubCategory()).ifPresent(validationService::checkReferenceExists);
-		Optional.ofNullable(category.getParentId()).map(List::of).ifPresent(validationService::checkReferenceExists);
-		Optional.ofNullable(category.getProductOffering()).ifPresent(validationService::checkReferenceExists);
 
-		productCatalogRepository.createCategory(tmForumMapper.map(categoryVO));
-		return HttpResponse.created(categoryVO);
-	}
+		Single<Category> categorySingle = Single.just(category);
 
-
-	@Override
-	public HttpResponse<Object> deleteCategory(String id) {
-		try {
-			productCatalogRepository.deleteEntry(id);
-			return HttpResponse.noContent();
-		} catch (HttpClientResponseException e) {
-			return HttpResponse.status(e.getStatus());
+		if (category.getSubCategory() != null && !category.getSubCategory().isEmpty()) {
+			Single<Category> checkingSingle = validationService.getCheckingSingle(category.getSubCategory(), category);
+			categorySingle = Single.zip(categorySingle, checkingSingle, (p1, p2) -> p1);
 		}
+
+		if (category.getParentId() != null) {
+			Single<Category> checkingSingle = validationService.getCheckingSingle(List.of(category.getParentId()), category);
+			categorySingle = Single.zip(categorySingle, checkingSingle, (p1, p2) -> p1);
+		}
+
+		if (category.getProductOffering() != null && !category.getProductOffering().isEmpty()) {
+			Single<Category> checkingSingle = validationService.getCheckingSingle(category.getProductOffering(), category);
+			categorySingle = Single.zip(categorySingle, checkingSingle, (p1, p2) -> p1);
+		}
+
+		return categorySingle.flatMap(
+						cat ->
+								productCatalogRepository
+										.createCategory(tmForumMapper.map(categoryVO))
+										.toSingleDefault(category))
+				.cast(Category.class)
+				.map(tmForumMapper::map)
+				.map(HttpResponse::created);
+	}
+
+
+	@Override
+	public Single<HttpResponse<Object>> deleteCategory(String id) {
+		return productCatalogRepository.deleteEntry(id).toSingleDefault(HttpResponse.noContent());
 	}
 
 	@Override
-	public HttpResponse<List<CategoryVO>> listCategory(@Nullable String fields, @Nullable Integer offset, @Nullable Integer limit) {
-		return HttpResponse.ok(productCatalogRepository.findCategories().stream().map(tmForumMapper::map).collect(Collectors.toList()));
+	public Single<HttpResponse<List<CategoryVO>>> listCategory(@Nullable String fields, @Nullable Integer offset, @Nullable Integer limit) {
+		return productCatalogRepository
+				.findCategories()
+				.map(List::stream)
+				.map(categoryStream -> categoryStream.map(tmForumMapper::map).toList())
+				.map(HttpResponse::ok);
 	}
 
 	@Override
-	public HttpResponse<CategoryVO> patchCategory(String id, CategoryUpdateVO category) {
+	public Single<HttpResponse<CategoryVO>> patchCategory(String id, CategoryUpdateVO category) {
 		return null;
 	}
 
 	@Override
-	public HttpResponse<CategoryVO> retrieveCategory(String id, @Nullable String fields) {
+	public Single<HttpResponse<CategoryVO>> retrieveCategory(String id, @Nullable String fields) {
 		return productCatalogRepository
 				.getCategory(id)
 				.map(tmForumMapper::map)
-				.map(HttpResponse::ok)
-				.orElseGet(HttpResponse::notFound);
+				.toSingle()
+				.map(HttpResponse::ok);
 	}
 }
