@@ -2,7 +2,7 @@ package org.fiware.tmforum.rest;
 
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
-import io.micronaut.http.client.exceptions.HttpClientResponseException;
+import io.reactivex.Single;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.fiware.party.api.OrganizationApi;
@@ -13,12 +13,13 @@ import org.fiware.tmforum.domain.TMForumMapper;
 import org.fiware.tmforum.domain.party.TaxExemptionCertificate;
 import org.fiware.tmforum.domain.party.organization.Organization;
 import org.fiware.tmforum.domain.party.organization.OrganizationRelationship;
+import org.fiware.tmforum.domain.product.Catalog;
 import org.fiware.tmforum.repository.PartyRepository;
 
 import javax.annotation.Nullable;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Controller
@@ -30,56 +31,75 @@ public class OrganizationApiController implements OrganizationApi {
 	private final ValidationService validationService;
 
 	@Override
-	public HttpResponse<OrganizationVO> createOrganization(OrganizationCreateVO organizationCreateVO) {
+	public Single<HttpResponse<OrganizationVO>> createOrganization(OrganizationCreateVO organizationCreateVO) {
+
 
 		OrganizationVO organizationVO = tmForumMapper.map(organizationCreateVO);
 		Organization organization = tmForumMapper.map(organizationVO);
-		Optional.ofNullable(organization.getOrganizationChildRelationship()).map(list -> list.stream().map(OrganizationRelationship.class::cast)
-				.toList()).ifPresent(validationService::checkReferenceExists);
 
-		Optional.ofNullable(organization.getOrganizationParentRelationship())
-				.map(OrganizationRelationship.class::cast)
-				.map(List::of)
-				.ifPresent(validationService::checkReferenceExists);
-		Optional.ofNullable(organization.getRelatedParty()).ifPresent(validationService::checkReferenceExists);
+
+		Single<Organization> organizationSingle = Single.just(organization);
+		if (organization.getOrganizationChildRelationship() != null && !organization.getOrganizationChildRelationship().isEmpty()) {
+			Single<Organization> checkingSingle = validationService.getCheckingSingle(organization.getOrganizationChildRelationship(), organization);
+			organizationSingle = Single.zip(organizationSingle, checkingSingle, (p1, p2) -> p1);
+		}
+		if (organization.getOrganizationParentRelationship() != null) {
+			Single<Organization> checkingSingle = validationService.getCheckingSingle(List.of(organization.getOrganizationParentRelationship()), organization);
+			organizationSingle = Single.zip(organizationSingle, checkingSingle, (p1, p2) -> p1);
+		}
+
+		if (organization.getRelatedParty() != null && !organization.getRelatedParty().isEmpty()) {
+			Single<Organization> checkingSingle = validationService.getCheckingSingle(organization.getRelatedParty(), organization);
+			organizationSingle = Single.zip(organizationSingle, checkingSingle, (p1, p2) -> p1);
+		}
 
 		List<TaxExemptionCertificate> taxExemptionCertificates = Optional.ofNullable(organization.getTaxExemptionCertificate()).orElseGet(List::of);
-		List<TaxExemptionCertificate> updatedCerts = taxExemptionCertificates.stream().map(partyRepository::getOrCreate).toList();
-		organization.setTaxExemptionCertificate(updatedCerts);
+		if (!taxExemptionCertificates.isEmpty()) {
+			Single<List<TaxExemptionCertificate>> taxExemptionCertificatesSingles =
+					Single.zip(taxExemptionCertificates.stream().map(partyRepository::getOrCreate).toList(), t -> Arrays.stream(t).map(TaxExemptionCertificate.class::cast).toList());
 
-		partyRepository.createOrganization(organization);
-
-		return HttpResponse.created(tmForumMapper.map(organization));
-	}
-
-
-	@Override
-	public HttpResponse<Object> deleteOrganization(String id) {
-		try {
-			partyRepository.deleteParty(id);
-			return HttpResponse.noContent();
-		} catch (HttpClientResponseException e) {
-			return HttpResponse.status(e.getStatus());
+			Single<Organization> updatingSingle = taxExemptionCertificatesSingles
+					.map(updatedTaxExemptions -> {
+						organization.setTaxExemptionCertificate(updatedTaxExemptions);
+						return organization;
+					});
+			organizationSingle = Single.zip(organizationSingle, updatingSingle, (p1, p2) -> p1);
 		}
+
+		return organizationSingle
+				.flatMap(orgToCreate -> partyRepository.createOrganization(orgToCreate).toSingleDefault(orgToCreate))
+				.cast(Organization.class)
+				.map(tmForumMapper::map)
+				.map(HttpResponse::created);
+	}
+
+
+	@Override
+	public Single<HttpResponse<Object>> deleteOrganization(String id) {
+		return partyRepository.deleteParty(id).toSingleDefault(HttpResponse.noContent());
 	}
 
 	@Override
-	public HttpResponse<List<OrganizationVO>> listOrganization(@Nullable String fields, @Nullable Integer offset, @Nullable Integer limit) {
-		return HttpResponse.ok(partyRepository.findOrganizations().stream().map(tmForumMapper::map).collect(Collectors.toList()));
+	public Single<HttpResponse<List<OrganizationVO>>> listOrganization(@Nullable String fields, @Nullable Integer offset, @Nullable Integer limit) {
+		return partyRepository.findOrganizations()
+				.map(List::stream)
+				.map(organizationStream -> organizationStream.map(tmForumMapper::map).toList())
+				.map(HttpResponse::ok);
+
 	}
 
 	@Override
-	public HttpResponse<OrganizationVO> patchOrganization(String id, OrganizationUpdateVO organization) {
+	public Single<HttpResponse<OrganizationVO>> patchOrganization(String id, OrganizationUpdateVO organization) {
 		// implement proper patch
 		return null;
 	}
 
 	@Override
-	public HttpResponse<OrganizationVO> retrieveOrganization(String id, @Nullable String fields) {
+	public Single<HttpResponse<OrganizationVO>> retrieveOrganization(String id, @Nullable String fields) {
 		return partyRepository
 				.getOrganization(id)
 				.map(tmForumMapper::map)
-				.map(HttpResponse::ok)
-				.orElseGet(HttpResponse::notFound);
+				.toSingle()
+				.map(HttpResponse::ok);
 	}
 }
